fixed overflow issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -325,7 +325,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: -20px; }
+  margin-bottom: -20px;
+  overflow-x: hidden; }
   #digital-platform .photo {
     margin: 0; }
     #digital-platform .photo img {
