--- a/src/scss/digital-row.scss
+++ b/src/scss/digital-row.scss
@@ -2,6 +2,7 @@
     background: #428bca;
     display: flex;
     margin-bottom: -20px;
+    overflow-x: hidden;
 
     .photo {
         margin: 0;
